e2e/tests/all/snapshots/spotlight_open_desktop.snap
---
source: e2e/src/suite.rs
description: spotlight at desktop (open)
expression: tree
---
button "Open the palette"
  StaticText "Open the palette"
paragraph
  StaticText "Or press Ctrl K."
generic
  generic
    generic
    generic
      dialog "Command palette" [modal]
        combobox "Command palette" [expanded] [haspopup=listbox]
          generic
        listbox "Command palette"
          group "Pages"
            StaticText "Pages"
            option "Home" [selected=false]
              generic
                StaticText "Home"
              generic
                StaticText "The start page"
            option "Changelog" [selected=false]
              generic
                StaticText "Changelog"
          group "Commands"
            StaticText "Commands"
            option "New file" [selected=false]
              generic
                StaticText "New file"
              generic
                generic
                  StaticText "Ctrl"
                StaticText "+"
                generic
                  StaticText "N"
--> aria-controls [id="lsx-N-listbox"] (rendered above)
