e2e/tests/all/snapshots/spotlight_rest_desktop.snap
---
source: e2e/src/suite.rs
description: spotlight at desktop (rest)
expression: tree
---
button "Open the palette"
  StaticText "Open the palette"
paragraph
  StaticText "Or press Ctrl K."
