e2e/tests/all/snapshots/stepper-named_rest_mobile.snap
---
source: e2e/src/suite.rs
description: stepper-named at mobile (rest)
expression: tree
---
list "Checkout"
  listitem [level=1]
    StaticText "Account, Completed"
  listitem [level=1]
    generic [current=step]
      StaticText "Shipping"
  listitem [level=1]
    StaticText "Review"
heading "Onboarding" [level=2]
  StaticText "Onboarding"
list "Onboarding"
  listitem [level=1]
    StaticText "Account, Completed"
  listitem [level=1]
    generic [current=step]
      StaticText "Shipping"
  listitem [level=1]
    StaticText "Review"
