e2e/tests/all/snapshots/stepper_rest_desktop.snap
---
source: e2e/src/suite.rs
description: stepper at desktop (rest)
expression: tree
---
list
  listitem [level=1]
    button "Account" [current=step]
      StaticText "Account"
  listitem [level=1]
    StaticText "Shipping"
  listitem [level=1]
    StaticText "Review"
region "Account"
  button "Continue to shipping"
    StaticText "Continue to shipping"
